# domin

./: .gitignore  .gitmodules  CONTRIBUTING.md  GEMINI.md  README.md  generate_dexsuite.py  generate_dexterous.py  install.md  pyproject.toml  task  test_dataset_config.py  test_scene.py  test_simulation.py
examples/: dexterous_dataset_config.py  dexterous_scene.py  generate_dexterous.py
sim_dataset_gen/: __init__.py
sim_dataset_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sim_dataset_gen/dataset_builder/: README.md  __init__.py  card_template.md  dataset_record.py  lerobot_dataset.py
src/: base_dataset_config.py  dexsuite_dataset_config.py  dexsuite_scene.py  dexterous_dataset_config.py  dexterous_scene.py  simulation_controller.py  test_dataset_builder.py  utils.py
src/dataset_builder/: __init__.py  future_todos.md  test_dataset_builder.py
src/dataset_builder/src/: compute_stats.py  lerobot_dataset.py  utils.py
src/domin/: __init__.py  base_dataset_config.py  generate_dataset.py  utils.py
src/domin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/domin/dataset_builder/: control_utils.py
src/sim_dataset_gen/: generate_dataset.py  sim_state.py  simulation_controller.py
tests/: test_dataset_builder.py  test_examples.py
