[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sim_dataset_gen"
version = "0.1.0"
description = "Easy and performant synthetic dataset generation for VLA models using Isaac Sim/Lab multi-env simulation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "datasets>=4.4.1",
    "jsonlines>=4.0.0",
    "av>=16.0.1",
    "decord>=0.6.0",
    "deepdiff>=8.6.1",
    "isaaclab[isaacsim]>=0.48.8",
    "stable-baselines3>=2.7.0",
    "scene-synthesizer",
    "xatlas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "isort"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sim_dataset_gen", "sim_dataset_gen.dataset_builder"]

[project.scripts]
simgen = "sim_dataset_gen.generate_dataset:main"

[project.urls]
Homepage = "https://github.com/nimit/sim_dataset_gen"
Issues = "https://github.com/nimit/sim_dataset_gen/issues"